[package]
name = "gfx_external_memory_test"
version = "0.1.0"
authors = ["Fabio Sgamma <uniformbuffer3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gfx-backend-vulkan = {path="../gfx/src/backend/vulkan"}
gfx-hal = {path="../gfx/src/hal"}
env_logger = "*"
log = "*"
